@@ -17,16 +17,16 @@ CREATE TABLE clients (
   company varchar(128) default NULL,
   createdby int(11) NOT NULL default '0',
   creationdate datetime NOT NULL default '0000-00-00 00:00:00',
-  fax varchar(25) default NULL,
+  fax varchar(32) default NULL,
   firstname varchar(64) default NULL,
-  homephone varchar(25) default NULL,
+  homephone varchar(32) default NULL,
   id int(11) NOT NULL auto_increment,
   lastname varchar(64) default NULL,
   leadsource varchar(64) default NULL,
-  mobilephone varchar(25) default NULL,
+  mobilephone varchar(32) default NULL,
   modifiedby int(11) default NULL,
   modifieddate timestamp(14) NOT NULL,
-  otherphone varchar(25) default NULL,
+  otherphone varchar(32) default NULL,
   password varchar(32) default NULL,
   postalcode varchar(15) default NULL,
   salesmanagerid int(11) default NULL,
@@ -37,7 +37,7 @@ CREATE TABLE clients (
   shiptostate char(2) default NULL,
   state char(2) default NULL,
   username varchar(32) default NULL,
-  workphone varchar(25) default NULL,
+  workphone varchar(32) default NULL,
   inactive tinyint(4) NOT NULL default '0',
   type enum('prospect','client') NOT NULL default 'prospect',
   email varchar(128) default NULL,
@@ -195,6 +195,7 @@ CREATE TABLE products (
   type enum('Inventory','Non-Inventory','Service','Kit','Assembly') NOT NULL default 'Inventory',
   taxable tinyint(4) NOT NULL default '1',
   memo text,
+  upc varchar(128) default NULL,
   UNIQUE KEY theid (id),
   UNIQUE KEY thpartnum (partnumber),
   KEY status (status)
