@@ -3,3 +3,5 @@ ALTER TABLE clients CHANGE workphone workphone varchar(32);
 ALTER TABLE clients CHANGE otherphone otherphone varchar(32);
 ALTER TABLE clients CHANGE mobilephone mobilephone varchar(32);
 ALTER TABLE clients CHANGE fax fax varchar(32);
+
+ALTER TABLE products ADD upc VARCHAR(128);
